feat(project script) feat(readme)

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,15 @@ wheels/
 
 # Virtual environments
 .venv
-./runtime
+.python-version
+.ropeproject
+*uv.lock
+
+# Runtime
+runtime/
+
+# Data
+samples/
+
+# MacOS
+.DS_Store
